Refactor Jest scripts to fix type-a-head regex
Previously, Jest was executed from within a nested directory. Doing so
caused the regex patterns used for the Jest type-a-head plugin to break,
as the `../../` would erroneously be included in the file name.

--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ yarn.lock
 *.tsbuildinfo
 
 # Report generated from jest-junit
-test/native/junit.xml
+junit.xml
 
 # Local overrides
 .wp-env.override.json
