components: Add types to Disabled

--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -10,6 +10,7 @@
 	},
 	"references": [
 		{ "path": "../deprecated" },
+		{ "path": "../dom" },
 		{ "path": "../element" },
 		{ "path": "../hooks" },
 		{ "path": "../icons" },
@@ -21,6 +22,7 @@
 		"src/animate/**/*",
 		"src/base-control/**/*",
 		"src/dashicon/**/*",
+		"src/disabled/**/*",
 		"src/draggable/**/*",
 		"src/flex/**/*",
 		"src/form-group/**/*",
