--- a/.eslintignore
+++ b/.eslintignore
@@ -3,6 +3,7 @@ build
 build-module
 build-types
 node_modules
+packages/babel-preset-default/dist
 packages/block-serialization-spec-parser/parser.js
 packages/e2e-tests/plugins
 packages/react-native-editor/bundle
