--- a/.prettierignore
+++ b/.prettierignore
@@ -2,6 +2,7 @@
 build
 build-module
 build-types
+packages/babel-preset-default/dist
 packages/block-serialization-spec-parser/parser.js
 packages/e2e-tests/plugins
 packages/react-native-editor/bundle
