--- a/package.json
+++ b/package.json
@@ -155,6 +155,7 @@
 		"commander": "4.1.0",
 		"concurrently": "3.5.0",
 		"copy-webpack-plugin": "5.1.2",
+		"core-js-builder": "3.11.0",
 		"cross-env": "3.2.4",
 		"css-loader": "5.1.3",
 		"cssnano": "4.1.10",
