--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -34,7 +34,8 @@
 		"src/grid/**/*",
 		"src/__next/**/*",
 		"src/h-stack/**/*",
-		"src/v-stack/**/*"
+		"src/v-stack/**/*",
+		"src/view/**/*"
 	],
 	"exclude": [
 		"src/**/*.android.js",
